--- a/index.html
+++ b/index.html
@@ -737,37 +737,37 @@ function renderTree(){
     });
     el.appendChild(pRow);
 
-    const folders = state.folders.filter(f => f.projectId === p.id);
-    for (const f of folders){
-      const fRow = document.createElement("div");
-      fRow.className = "row" + (f.id === state.selectedFolderId ? " active" : "");
-      fRow.style.marginLeft = "14px";
-      fRow.innerHTML = `
-        <div class="l">
-          <span class="emoji">📁</span>
-          <div class="name">${escapeHtml(f.name)}</div>
-        </div>
-        <div class="meta">
-          <button class="mini secondary" title="Přejmenovat složku">✏️</button>
-          <button class="mini danger" title="Smazat složku">🗑️</button>
-        </div>
-      `;
-      fRow.addEventListener("click", () => {
-        selectFolder(f.id);
-        if (isMobile()) $("#sidebar").classList.add("collapsed");
-      });
+// ✅ Složky v sidebaru ukazuj jen na PC
+if (!isMobile()){
+  const folders = state.folders.filter(f => f.projectId === p.id);
+  for (const f of folders){
+    const fRow = document.createElement("div");
+    fRow.className = "row" + (f.id === state.selectedFolderId ? " active" : "");
+    fRow.style.marginLeft = "14px";
+    fRow.innerHTML = `
+      <div class="l">
+        <span class="emoji">📁</span>
+        <div class="name">${escapeHtml(f.name)}</div>
+      </div>
+      <div class="meta">
+        <button class="mini secondary" title="Přejmenovat složku">✏️</button>
+        <button class="mini danger" title="Smazat složku">🗑️</button>
+      </div>
+    `;
 
-      const [renameBtn, delBtn] = fRow.querySelectorAll("button");
-      renameBtn.addEventListener("click", async (e) => {
-        e.stopPropagation();
-        await uiRenameFolder(f.id);
-      });
-      delBtn.addEventListener("click", async (e) => {
-        e.stopPropagation();
-        await uiDeleteFolder(f.id);
-      });
+    fRow.addEventListener("click", () => {
+      selectFolder(f.id);
+      if (isMobile()) $("#sidebar").classList.add("collapsed");
+    });
 
-      el.appendChild(fRow);
+    const [renameBtn, delBtn] = fRow.querySelectorAll("button");
+    renameBtn.addEventListener("click", async (e) => { e.stopPropagation(); await uiRenameFolder(f.id); });
+    delBtn.addEventListener("click", async (e) => { e.stopPropagation(); await uiDeleteFolder(f.id); });
+
+    el.appendChild(fRow);
+  }
+}
+
     }
   }
 }
