--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
       <div class="title">Work App</div>
       <div class="chip" id="chipStatus">Offline • Lokálně</div>
     </div>
-<div class="top-actions">
-  <button class="secondary" id="btnToggleSidebar" title="Projekty">☰</button>
-  <button class="ok mini" id="btnNewProjectTop" title="Nový projekt">＋</button>
-</div>
+    <div class="top-actions">
+      <button class="secondary" id="btnToggleSidebar" title="Projekty">☰</button>
+      <!-- Export z topbaru pryč – export jen u projektu -->
+    </div>
   </div>
 
   <div class="shell">
@@ -737,37 +737,37 @@ function renderTree(){
     });
     el.appendChild(pRow);
 
-// ✅ Složky v sidebaru ukazuj jen na PC
-if (!isMobile()){
-  const folders = state.folders.filter(f => f.projectId === p.id);
-  for (const f of folders){
-    const fRow = document.createElement("div");
-    fRow.className = "row" + (f.id === state.selectedFolderId ? " active" : "");
-    fRow.style.marginLeft = "14px";
-    fRow.innerHTML = `
-      <div class="l">
-        <span class="emoji">📁</span>
-        <div class="name">${escapeHtml(f.name)}</div>
-      </div>
-      <div class="meta">
-        <button class="mini secondary" title="Přejmenovat složku">✏️</button>
-        <button class="mini danger" title="Smazat složku">🗑️</button>
-      </div>
-    `;
+    const folders = state.folders.filter(f => f.projectId === p.id);
+    for (const f of folders){
+      const fRow = document.createElement("div");
+      fRow.className = "row" + (f.id === state.selectedFolderId ? " active" : "");
+      fRow.style.marginLeft = "14px";
+      fRow.innerHTML = `
+        <div class="l">
+          <span class="emoji">📁</span>
+          <div class="name">${escapeHtml(f.name)}</div>
+        </div>
+        <div class="meta">
+          <button class="mini secondary" title="Přejmenovat složku">✏️</button>
+          <button class="mini danger" title="Smazat složku">🗑️</button>
+        </div>
+      `;
+      fRow.addEventListener("click", () => {
+        selectFolder(f.id);
+        if (isMobile()) $("#sidebar").classList.add("collapsed");
+      });
 
-    fRow.addEventListener("click", () => {
-      selectFolder(f.id);
-      if (isMobile()) $("#sidebar").classList.add("collapsed");
-    });
+      const [renameBtn, delBtn] = fRow.querySelectorAll("button");
+      renameBtn.addEventListener("click", async (e) => {
+        e.stopPropagation();
+        await uiRenameFolder(f.id);
+      });
+      delBtn.addEventListener("click", async (e) => {
+        e.stopPropagation();
+        await uiDeleteFolder(f.id);
+      });
 
-    const [renameBtn, delBtn] = fRow.querySelectorAll("button");
-    renameBtn.addEventListener("click", async (e) => { e.stopPropagation(); await uiRenameFolder(f.id); });
-    delBtn.addEventListener("click", async (e) => { e.stopPropagation(); await uiDeleteFolder(f.id); });
-
-    el.appendChild(fRow);
-  }
-}
-
+      el.appendChild(fRow);
     }
   }
 }
@@ -1436,7 +1436,7 @@ $("#hdrProjects").addEventListener("click", () => {
   if (isMobile()) $("#sidebar").classList.toggle("collapsed");
 });
 
-$("#btnNewProject").addEventListener("click",  () => {
+$("#btnNewProject").addEventListener("click", async () => {
   const name = prompt("Název projektu:");
   if (!name) return;
   await createProject(name);
