--- a/index.html
+++ b/index.html
@@ -428,6 +428,8 @@
 
   <div id="drawerBackdrop" class="drawer-backdrop" hidden></div>
 
+  <div id="drawerBackdrop" class="drawer-backdrop" hidden></div>
+
   <div class="shell">
     <aside class="sidebar" id="sidebar">
       <div class="hdr">
