--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ function renderLanding(){
           <button class="ok" id="btnCreateProject">Vytvořit</button>
         </div>
       </div>
-      <div class="credit">Vytvořil Jakub Haas</div>
+      <div class="credit">Nečunm na to co tu píšu a pracuj dopiči </div>
     </div>
   `;
   setActions([]);
